# py.test

./: .env.example  README.md  pyproject.toml
agent/: app.py  (+66 more)
pyagent/: .env.example  .mcp.json  README.md  agent.spec  chat-20260711-194158.md  config.example.yaml  main.py  pyproject.toml  requirements.txt  sbom.json  session-1783798866.md  session-1783799154.md
pyagent/.gsd/: CODEBASE.md  gsd.db  last-snapshot.md  notifications.jsonl
pyagent/.gsd/audit/: events.jsonl
pyagent/agent/: __init__.py  agent_loop.py  apex_suite.py  app.py  async_engine.py  atlas_reactor.py  audit_log.py  auto_session.py  autonomous.py  autostart.py  boot_sequence.py  branching.py  browser_automation.py  cache.py  cancellation.py  capabilities.py  cicd_builder.py  cloud_cost.py  cognitive.py  commands.py  config.py  consensus.py  context_injector.py  context_manager.py  core.py  cost_ledger.py  cost_tracker.py  database.py  effects.py  enterprise_suite.py  events.py  export_html.py  fake_detector.py  fallback.py  feature_flags.py  fileops.py  forgecore.py  formal_verifier.py  frontier_suite.py  goal_history.py  (+94 more)
pyagent/scripts/: build_binary.sh  install.sh
pyagent/tests/: test_async_engine.py  test_commands.py  test_convert_color.py  test_effects.py  test_enterprise_v2.py  test_enterprise_v3.py  test_enterprise_v4.py  test_fileops.py  test_guardrails.py  test_health.py  test_infra.py  test_math_data_system.py  test_persona_config.py  test_providers.py  test_search_edit.py  test_session.py  test_text_random.py  test_tools.py  test_ui_features.py  test_utils.py  test_yaml_config.py
(+65 files in other folders)
