[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-agent"
version = "2.0.0"
description = "A clean, minimal terminal AI coding assistant."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ai", "agent", "terminal", "cli", "llm"]
dependencies = [
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.43",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4.0"]
providers = ["openai>=1.30.0", "anthropic>=0.28.0"]

[project.scripts]
agent = "agent.app:main"

[tool.setuptools.packages.find]
include = ["agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py310"
